force-app/main/default/objects/Opportunity/fields/DSales_Colaborador__c.field-meta.xml
<CustomField>
    <fullName>DSales_Colaborador__c</fullName>
    <label>Colaborador</label>
    <length>50</length>
    <type>Text</type>
</CustomField>