force-app/main/default/objects/Opportunity/fields/DSALES_Tiend__c.field-meta.xml
<CustomField>
    <fullName>dsalesTienda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tienda</label>
    <referenceTo>Tienda__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>