force-app/main/default/objects/Opportunity/fields/dsalesConteoProductosSC__c.field-meta.xml
<CustomField>
    <fullName>dsalesConteoProductosSC__c</fullName>
    <description>Conteo de productos dentro de la oportunidad</description>
    <label>Conteo Productos SC</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>