force-app/main/default/objects/Opportunity/fields/dsalesIdentificadorCoppel__c.field-meta.xml
<CustomField>
    <fullName>dsalesIdentificadorCoppel__c</fullName>
    <description>Número de identificador para Coppel</description>
    <label>Identificador Coppel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>