force-app/main/default/objects/Opportunity/fields/dsalesIduVenta__c.field-meta.xml
<CustomField>
    <fullName>dsalesIduVenta__c</fullName>
    <label>IduVenta</label>
    <length>6</length>
    <type>Text</type>
</CustomField>