force-app/main/default/objects/Opportunity/fields/dsalesNumeroSucursal__c.field-meta.xml
<CustomField>
    <fullName>dsalesNumeroSucursal__c</fullName>
    <description>Número de Sucursal de la tienda Coppel</description>
    <label>Numero de sucursal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>