force-app/main/default/objects/Opportunity/recordTypes/dsalesSeguroCelulares.recordType-meta.xml
<RecordType>
    <fullName>dsalesSeguroCelulares</fullName>
    <active>true</active>
    <businessProcess>Garantia Extendida</businessProcess>
    <description>Crea las oportunidades para el proceso de Seguro de celulares del grupo Coppel.</description>
    <label>Seguro de celulares</label>
</RecordType>