force-app/main/default/objects/Opportunity/recordTypes/dsalesServicios.recordType-meta.xml
<RecordType>
    <fullName>dsalesServicios</fullName>
    <active>true</active>
    <businessProcess>Garantia Extendida</businessProcess>
    <description>Crea las oportunidades para el proceso de servicios para grupo Coppel</description>
    <label>Servicios</label>
</RecordType>