force-app/main/default/objects/Opportunity/listViews/Opp_GEX.listView-meta.xml
<ListView>
    <fullName>Opp_GEX</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.DSales_Garantia_Extendida</value>
    </filters>
    <label>Opp GEX</label>
</ListView>